# Windows-Unattend-XML-Generator

./: .gitignore  README.md  build-standalone.mjs  build-tauri-frontend.mjs  index.html  make-icon.py  package-lock.json  package.json  styles.css
.github/workflows/: ci.yml
js/: app.js  config.js  dynamic-elements.js  language-manager.js  pro-mode.js  ui-helpers.js  validation.js  wizard.js  xml-generator.js
lang/: de.json  en.json  es.json  fr.json  it.json  pl.json  ru.json  zh.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
test/: end-to-end-xml.test.mjs  naming-script.test.mjs  password-encoding.test.mjs  populate-item.test.mjs  pro-mode-dom.test.mjs  roundtrip-xml.test.mjs  run-all.mjs  standalone-build.test.mjs  storable-config.test.mjs  validation.test.mjs  wizard-end-to-end.test.mjs  wizard-restore.test.mjs  xss-escaping.test.mjs
