[package]
name = "autounattend-generator"
version = "0.4.0"
description = "Windows Autounattend.xml Generator"
authors = ["CallMeTechie"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
